--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Minimal theme
-logo: /assets/img/logo.png
+logo: /assets/img/WhatsApp Image 2021-10-22 at 7.29.06 PM.jpeg
 description: Minimal is a theme for GitHub Pages.
 show_downloads: true
 google_analytics:
